# cli-tools

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: agent-query.sh  human-browse.sh
scripts/: record-cassettes.sh  test-split.sh
src/legalize_cli/: SEP.py  __init__.py  __main__.py  auth.py  cache.py  config.py  http.py  mcp_server.py  rate_limit.py
src/legalize_cli/commands/: article.py  asof_cmd.py  auth_cmd.py  cache_cmd.py  diff.py  list_laws.py  list_precedents.py  mcp_cmd.py  precedent.py  search_cmd.py
src/legalize_cli/github/: blobs.py  commits.py  contents.py  search_code.py  trees.py
src/legalize_cli/laws/: articles.py  asof.py  diff.py  frontmatter.py  list.py  model.py  revisions.py  status.py
src/legalize_cli/precedents/: enumerate.py  fetch.py  index.py  list.py  model.py
src/legalize_cli/search/: code_search.py  metadata_search.py  strategies.py  tree_filter.py  unicode.py
src/legalize_cli/util/: article_parse.py  (+3 more)
tests/: conftest.py
tests/integration/: conftest.py  test_article.py  test_asof.py  test_cli_smoke.py  test_diff.py  test_list_laws.py  test_precedent_get.py  test_precedent_new_lookup.py  test_search_code.py  test_search_metadata.py  test_search_precedents_tree.py  test_search_tree.py  test_timezone_assertion.py
tests/live/: conftest.py  test_smoke_asof_mingbeop.py  test_smoke_list_laws.py  test_smoke_search.py
tests/unit/: test_article_query.py  test_articles.py  test_asof.py  test_auth.py  test_auth_cmd.py  test_cache.py  test_cache_cmd.py  test_commits_parse.py  test_diff.py  test_errors.py  test_force_push_fingerprint.py  test_frontmatter.py  test_heavy_scan_budget.py  test_json_schema_version.py  test_mcp_server.py  test_precedent_enumerate.py  test_precedent_index_fetch.py  test_rate_limit.py  test_search_unicode.py  test_trees_parse.py  test_unicode.py
(+16 files in other folders)
